--- a/Frontend/elearning/package.json
+++ b/Frontend/elearning/package.json
@@ -10,12 +10,14 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "react-bootstrap": "^2.7.4",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-tilt": "^1.0.2",
+    "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
